# webapp-skeleton

./: .dockerignore  .gitignore  CONTEXT.md  MANUAL.md  README.md  SPECS.md  docker-compose.yml  package-lock.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1723b96b2d76_add_cascade_delete_to_user_subscriptions.py  fa2fa8ad97fa_initial_migration.py  ffd6e7bca23d_add_project_model.py
backend/app/: main.py
backend/app/api/auth/: router.py
backend/app/api/blog/: router.py
backend/app/api/payments/: router.py
backend/app/api/projects/: router.py
backend/app/api/users/: router.py
backend/app/core/: config.py  dependencies.py  firebase_admin.py  security.py  stripe.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  project.py  subscription.py  user.py
backend/app/schemas/: __init__.py  project.py  subscription.py  token.py  user.py
backend/app/scripts/: check_plans.py  init_subscription_plans.py  update_stripe_plans.py
cms/: .strapi-updater.json  package-lock.json  package.json  start.sh
cms/config/: admin.js  database.js
cms/src/api/article/controllers/: article.js
cms/src/api/article/routes/: article.js
cms/src/api/blog-post/controllers/: blog-post.js
cms/src/api/blog-post/routes/: blog-post.js
cms/src/components/sections/: content-section.json
cms/src/components/shared/: seo.json
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/components/auth/: AuthStatus.tsx  LoginButton.tsx
frontend/components/dashboard/: Dashboard.tsx  DashboardLayout.tsx  Header.tsx  Sidebar.tsx
frontend/components/landing/: Features.tsx  Hero.tsx  Testimonials.tsx
frontend/components/layout/: Footer.tsx  Layout.tsx  Navbar.tsx
frontend/components/pricing/: PricingCard.tsx
frontend/components/ui/: Button.tsx  Section.tsx  SectionHeading.tsx
frontend/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/pages/: _app.tsx  about.tsx  book-demo.tsx  dashboard.tsx  features.tsx  index.tsx  login.tsx  pricing.tsx
frontend/pages/auth/: login.tsx  signin.tsx  signup.tsx
frontend/pages/blog/: [slug].tsx  index.tsx
frontend/pages/dashboard/: index.tsx  invoices.tsx  projects.tsx  settings.tsx  subscriptions.tsx
frontend/styles/: globals.css
frontend/types/: auth.ts  blog.ts  global.d.ts  jsx.d.ts  subscription.ts
frontend/utils/: api.ts  image.ts  strapi.ts
infrastructure/docker/: backend.Dockerfile  cms.Dockerfile  frontend.Dockerfile
scripts/: SEO_INSTRUCT.txt  real_article.py  upload_articles.py
(+7 files in other folders)
